Opened 11 years ago
Closed 8 years ago
#6717 closed bug (fixed)
Terminal: character problems
Reported by: | MichaelPeppers | Owned by: | siarzhuk |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Terminal | Version: | R1/Development |
Keywords: | Cc: | siarzhuk | |
Blocked By: | Blocking: | ||
Platform: | All |
Description
hrev38969, the Terminal doesn't complete showing some paths if there are japanese characters in it, except if you start writing something.
Other odd stuff happens, but probably the screenshots can explain the problems better than me.
Attachments (5)
Change History (14)
by , 11 years ago
Attachment: | PathNotCompleted.jpeg added |
---|
by , 11 years ago
Attachment: | PathNotCompleted2.jpeg added |
---|
by , 11 years ago
Attachment: | Listdev.jpg added |
---|
by , 11 years ago
Attachment: | Test2.jpeg added |
---|
comment:2 by , 11 years ago
Forgot to say, a character from the folder name is missing from the Japanese character set in Haiku. Maybe that could be the reason of these problems.
by , 10 years ago
hrev40145, Test2.png + deleting the writing using the backspace. As you can see, the path line jumps into a previous line.
comment:5 by , 9 years ago
Cc: | added |
---|
follow-up: 7 comment:6 by , 9 years ago
MichaelPeppers: could you please retest with hrev45307 or later?
comment:7 by , 9 years ago
Replying to luroh:
MichaelPeppers: could you please retest with hrev45307 or later?
Unfortunately not at the moment... I'll be back to my main pc approximately after the first week of January; anyway, I think siarzhuk should be able to test whether it's been solved before I can.
If that's not the case I will try to reproduce it as soon as I can.
comment:8 by , 8 years ago
Owner: | changed from | to
---|---|
Status: | new → assigned |
comment:9 by , 8 years ago
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
East Asian Full-Width characters support fixed in hrev45462. The issue should be fixed now.
Test2.jpeg shows what happens if you write something longer than the current line in this particular case. Same effect as bug #6387, (apparently) different cause.